kill executor with the main thread